서브페이지 오시는길까지

--- a/index.html
+++ b/index.html
@@ -1594,78 +1594,76 @@
                     </div>
                 </div>
             </section>
-            <section class="section fp-auto-height">
-                <div class="slide">
-                    <!-- 푸터 시작 { -->
-                    <footer>
-                        <div class="inner">
-                            <div class="box1">
-                                <img src="./img/common/footer-logo.svg" alt="법무법인 굿플랜" class="logo">
-                            </div>
-                            <div class="box2">
-                                <ul class="info-list">
-                                    <li>
-                                        <div class="label">전화</div>
-                                        <div class="content">대표번호 : 1800-6490</div>
-                                    </li>
-                                    <li>
-                                        <div class="label">E-mail</div>
-                                        <div class="content">ask@goodplan.kr</div>
-                                    </li>
-                                    <li>
-                                        <div class="label">사업자등록번호</div>
-                                        <div class="content">890-87-01999</div>
-                                    </li>
-                                    <li>
-                                        <div class="label">대표변호사</div>
-                                        <div class="content">오규성, 김가람</div>
-                                    </li>
-                                    <li>
-                                        <div class="label">광고책임변호사</div>
-                                        <div class="content">김가람</div>
-                                    </li>
-                                    <li class="full">
-                                        <div class="label">주소</div>
-                                        <div class="half-div">
-                                            <div class="address-wrap">
-                                                <p class="address-list">
-                                                    <span class="name">서초 주사무소</span>
-                                                    <span class="address">서울특별시 서초구 서초중앙로24길 16, KM타워 5층T : 1800-6490F : 02-525-6489</span>
-                                                </p>
-                                                <p class="address-list">
-                                                    <span class="name">수원 분사무소</span>
-                                                    <span class="address">경기 수원시 영통구 광교중앙로 256 탑프라자 403호T : 031-213-6489F : 031-213-6488</span>
-                                                </p>
-                                                <p class="address-list">
-                                                    <span class="name">목동 분사무소</span>
-                                                    <span class="address">서울 양천구 신월로 387, 유앤미법조빌딩 103호ㆍ301호T: 02-2604-6489F: 02-2604-6488</span>
-                                                </p>
-                                                <p class="address-list">
-                                                    <span class="name">부산 분사무소</span>
-                                                    <span class="address">부산광역시 해운대구 APEC로 17, 센텀리더스마크 3702호T: 051-925-3702F: 051-926-3702</span>
-                                                </p>
-                                                <p class="address-list">
-                                                    <span class="name">여주 분사무소</span>
-                                                    <span class="address">경기 여주시 현암로 21-10 103호T: 031-884-1007F: 031-688-1057</span>
-                                                </p>
-                                                <p class="address-list">
-                                                    <span class="name">천안 분사무소</span>
-                                                    <span class="address">충청남도 천안시 동남구 청수14로 68 7층 703, 704호T: 041-555-6489F: 041-555-6490</span>
-                                                </p>
-                                                <p class="address-list">
-                                                    <span class="name">청주 분사무소</span>
-                                                    <span class="address">충청북도 청주시 서원구 산남로70번길 34, 신성미소시티블루1 504호T: 043-715-2005F: 043-715-2008</span>
-                                                </p>
-                                            </div>
-                                            <div class="copy-right">ⓒ Lawfirm GOODPLAN. All Rights Reserved.</div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
+            <section class="footer-section section fp-auto-height">
+                <!-- 푸터 시작 { -->
+                <footer>
+                    <div class="inner">
+                        <div class="box1">
+                            <img src="./img/common/footer-logo.svg" alt="법무법인 굿플랜" class="logo">
                         </div>
-                    </footer>
-                    <!-- } 푸터 끝-->
-                </div>
+                        <div class="box2">
+                            <ul class="info-list">
+                                <li>
+                                    <div class="label">전화</div>
+                                    <div class="content">대표번호 : 1800-6490</div>
+                                </li>
+                                <li>
+                                    <div class="label">E-mail</div>
+                                    <div class="content">ask@goodplan.kr</div>
+                                </li>
+                                <li>
+                                    <div class="label">사업자등록번호</div>
+                                    <div class="content">890-87-01999</div>
+                                </li>
+                                <li>
+                                    <div class="label">대표변호사</div>
+                                    <div class="content">오규성, 김가람</div>
+                                </li>
+                                <li>
+                                    <div class="label">광고책임변호사</div>
+                                    <div class="content">김가람</div>
+                                </li>
+                                <li class="full">
+                                    <div class="label">주소</div>
+                                    <div class="half-div">
+                                        <div class="address-wrap">
+                                            <p class="address-list">
+                                                <span class="name">서초 주사무소</span>
+                                                <span class="address">서울특별시 서초구 서초중앙로24길 16, KM타워 5층T : 1800-6490F : 02-525-6489</span>
+                                            </p>
+                                            <p class="address-list">
+                                                <span class="name">수원 분사무소</span>
+                                                <span class="address">경기 수원시 영통구 광교중앙로 256 탑프라자 403호T : 031-213-6489F : 031-213-6488</span>
+                                            </p>
+                                            <p class="address-list">
+                                                <span class="name">목동 분사무소</span>
+                                                <span class="address">서울 양천구 신월로 387, 유앤미법조빌딩 103호ㆍ301호T: 02-2604-6489F: 02-2604-6488</span>
+                                            </p>
+                                            <p class="address-list">
+                                                <span class="name">부산 분사무소</span>
+                                                <span class="address">부산광역시 해운대구 APEC로 17, 센텀리더스마크 3702호T: 051-925-3702F: 051-926-3702</span>
+                                            </p>
+                                            <p class="address-list">
+                                                <span class="name">여주 분사무소</span>
+                                                <span class="address">경기 여주시 현암로 21-10 103호T: 031-884-1007F: 031-688-1057</span>
+                                            </p>
+                                            <p class="address-list">
+                                                <span class="name">천안 분사무소</span>
+                                                <span class="address">충청남도 천안시 동남구 청수14로 68 7층 703, 704호T: 041-555-6489F: 041-555-6490</span>
+                                            </p>
+                                            <p class="address-list">
+                                                <span class="name">청주 분사무소</span>
+                                                <span class="address">충청북도 청주시 서원구 산남로70번길 34, 신성미소시티블루1 504호T: 043-715-2005F: 043-715-2008</span>
+                                            </p>
+                                        </div>
+                                        <div class="copy-right">ⓒ Lawfirm GOODPLAN. All Rights Reserved.</div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </footer>
+                <!-- } 푸터 끝-->
             </section>
         </main>
 
@@ -1673,11 +1671,20 @@
         <script>
             var myFullpage = new fullpage('#fullpage', {
                 navigation: true,
-                navigationTooltips: ['First Section', 'Second Section', 'Third Section'],
+                anchors: ['main', 'member', 'field', 'case', 'office', 'contact'],
+                navigationTooltips: ['메인', '구성원소개', '업무분야', '업무사례', '사무소안내', '상담신청'],
+                showActiveTooltip: true,
                 controlArrows: false,
                 responsiveWidth: 950, 
                 responsiveHeight: 600, 
-                licenseKey: 'L6EO6-9SMM9-K0PL6-TRJ7J-XATEL'
+                licenseKey: 'L6EO6-9SMM9-K0PL6-TRJ7J-XATEL',
+                onLeave: function(origin, destination, direction) {
+                    if (destination.anchor === 'case' || destination.anchor === 'office') {
+                        $('#fp-nav').addClass('reversal');
+                    } else {
+                        $('#fp-nav').removeClass('reversal');
+                    }
+                }
             });
         </script>
         <!-- } 풀페이지 스크립트 끝 -->
