풀페이지 클릭

--- a/index.html
+++ b/index.html
@@ -1677,6 +1677,7 @@
                 controlArrows: false,
                 responsiveWidth: 950, 
                 responsiveHeight: 600, 
+                cancelable: true,
                 licenseKey: 'L6EO6-9SMM9-K0PL6-TRJ7J-XATEL',
                 onLeave: function(origin, destination, direction) {
                     if (destination.anchor === 'case' || destination.anchor === 'office') {
