성공사례 상세페이지까지 제작

--- a/sub1_2.html
+++ b/sub1_2.html
@@ -47,12 +47,12 @@
                 </button>
             </div>
             <div class="menu-div">
-                <div class="title-item">굿플랜 소개</div>
+                <div class="title-item"><a href="./sub1_1.html">굿플랜 소개</a></div>
                 <div class="sub-item"><a href="./sub1_1.html">법무법인 소개</a></div>
                 <div class="sub-item"><a href="./sub1_2.html">구성원</a></div>
                 <div class="sub-item"><a href="./sub1_3.html">오시는길</a></div>
 
-                <div class="title-item">주요업무</div>
+                <div class="title-item"><a href="./sub2.html">주요업무</a></div>
                 <div class="sub-item"><a href="./sub2_1.html">형사</a></div>
                 <div class="sub-item"><a href="./sub2_2.html">부동산</a></div>
                 <div class="sub-item"><a href="./sub2_3.html">이혼  · 상속</a></div>
@@ -63,13 +63,13 @@
                 <div class="sub-item"><a href="./sub2_8.html">가상자산</a></div>
                 <div class="sub-item"><a href="./sub2_9.html">자문</a></div>
 
-                <div class="title-item">커뮤니티</div>
+                <div class="title-item"><a href="./sub3_1.html">커뮤니티</a></div>
                 <div class="sub-item"><a href="./sub3_1.html">성공사례</a></div>
                 <div class="sub-item"><a href="./sub3_2.html">언론보도</a></div>
                 <div class="sub-item"><a href="./sub3_3.html">소식</a></div>
                 <div class="sub-item"><a href="./sub3_4.html">전문 칼럼</a></div>
 
-                <div class="title-item">상담신청</div>
+                <div class="title-item"><a href="./sub4_1.html">상담신청</a></div>
                 <div class="sub-item"><a href="./sub4_1.html">상담신청</a></div>
             </div>
         </section>
