애니메이션 효과

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         
 
         <main class="main" id="fullpage">
-            <section class="section section1">
+            <section class="section section1 ani">
                 <div class="inner">
                     <h1>
                         사건을 맡기기 전에,<br/>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section section2 fp-auto-height-responsive">
+            <section class="section section2 fp-auto-height-responsive ani">
                 <div class="inner">
                     <div class="left-content">
                         <h2>
@@ -111,7 +111,7 @@
                     <img src="./img/main/section2/lawyer.png" alt="오규성 대표 변호사" class="lawyer-img" />
                 </div>
             </section>
-            <section class="section section3 fp-auto-height-responsive">
+            <section class="section section3 fp-auto-height-responsive ani">
                 <div class="inner">
                     <h2>
                         <div class="title-bar"></div>
@@ -217,7 +217,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section section4 fp-auto-height-responsive">
+            <section class="section section4 fp-auto-height-responsive ani">
                 <div class="inner">
                     <h2>
                         <div class="title-bar"></div>
@@ -1602,7 +1602,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section section5 fp-auto-height-responsive">
+            <section class="section section5 fp-auto-height-responsive ani">
                 <div class="inner">
                     <h2>
                         <div class="title-bar"></div>
@@ -1793,7 +1793,7 @@
 
                 </div>
             </section>
-            <section class="apply-section section section6 fp-auto-height-responsive">
+            <section class="apply-section section section6 fp-auto-height-responsive ani">
                 <div class="inner">
                     <div class="left-box">
                         <h2>
@@ -1828,15 +1828,14 @@
                                     <div class="label">사무소 <span>*</span></div>
                                     <div class="iptBox">
                                         <select name="" class="ipt">
-                                            <!--아래 값은 예시입니다. -->
-                                            <option value="">-</option>
-                                            <option value="">서초 주사무소</option>
-                                            <option value="">수원 분사무소</option>
-                                            <option value="">목동 분사무소</option>
-                                            <option value="">부산 분사무소</option>
-                                            <option value="">여주 분사무소</option>
-                                            <option value="">천안 분사무소</option>
-                                            <option value="">청주 분사무소</option>
+                                        <option value="">-</option>
+                                        <option value="">서초</option>
+                                        <option value="">목동</option>
+                                        <option value="">수원</option>
+                                        <option value="">여주</option>
+                                        <option value="">천안</option>
+                                        <option value="">청주</option>
+                                        <option value="">부산</option>
                                         </select>
                                     </div>
                                 </li>
@@ -1844,16 +1843,16 @@
                                     <div class="label">사건분야 <span>*</span></div>
                                     <div class="iptBox">
                                         <select name="" class="ipt">
-                                            <!--아래 값은 예시입니다. -->
                                             <option value="">-</option>
-                                            <option value="">형사</option>
-                                            <option value="">부동산</option>
-                                            <option value="">이혼  · 상속</option>
-                                            <option value="">손해배상  · 대여금</option>
-                                            <option value="">재개발 · 재건축  </option>
-                                            <option value="">회생 · 파산</option>
-                                            <option value="">조세 · 행정</option>
-                                            <option value="">가상자산</option>
+                                            <option value="형사">형사</option>
+                                            <option value="부동산">부동산</option>
+                                            <option value="이혼  · 상속">이혼  · 상속</option>
+                                            <option value="손해배상  · 대여금">손해배상  · 대여금</option>
+                                            <option value="재개발 · 재건축">재개발 · 재건축</option>
+                                            <option value="회생 · 파산">회생 · 파산</option>
+                                            <option value="조세 · 행정">조세 · 행정</option>
+                                            <option value="가상자산">가상자산</option>
+                                            <option value="자문">자문</option>
                                         </select>
                                     </div>
                                 </li>
