--- a/sub1_1.html
+++ b/sub1_1.html
@@ -88,7 +88,7 @@
                             <div class="en">LAWFIRM <span class="gold">GOODPLAN</span></div>
                         </div>
                     </section>
-                    <section class="section1">
+                    <section class="section1 ani">
                         <div class="inner">
                             <div class="sub-title-div center">
                                 <div class="bar"></div>
@@ -124,14 +124,14 @@
                             </div>
                         </div>
                     </section>
-                    <section class="section2">
+                    <section class="section2 ani">
                         <div class="inner">
-                            <div class="sub-title-div">
+                            <div class="sub-title-div ani">
                                 <div class="bar"></div>
                                 <h2>사건의 전 과정을 책임지는 법률 서비스</h2>
                             </div>
 
-                            <div class="half-div">
+                            <div class="half-div ani">
                                 <div class="img-div" style="background-image: url('./img/sub/sub1_1/img1.jpg');"></div>
                                 <div class="content-div">
                                     굿플랜은 다양한 분야에서<br class="mo-none"/>
@@ -143,12 +143,12 @@
                                 </div>
                             </div>
 
-                            <div class="sub-title-div right">
+                            <div class="sub-title-div right ani">
                                 <div class="bar"></div>
                                 <h2>처음부터 변호사가 직접 상담합니다</h2>
                             </div>
 
-                            <div class="half-div type2">
+                            <div class="half-div type2 ani">
                                 <div class="content-div">
                                     굿플랜에는 사무장이 없습니다.<br class="mo-none"/>
                                     따라서 첫 상담부터 전담 변호사가 직접 상담을 진행합니다.<br/><br/>
@@ -164,7 +164,7 @@
                             <div class="line-bar"></div>
 
 
-                            <div class="half-div type3">
+                            <div class="half-div type3 ani">
                                 <div class="img-div" style="background-image: url('./img/sub/sub1_1/img3.jpg');"></div>
                                 <div class="content-div">
                                     <div class="sub-title-div">
@@ -183,7 +183,7 @@
                                 </div>
                             </div>
 
-                            <div class="half-div type2 type3">
+                            <div class="half-div type2 type3 ani">
                                 <div class="content-div">
                                     <div class="sub-title-div">
                                         <div class="bar"></div>
@@ -205,7 +205,7 @@
 
                         </div>
                     </section>
-                    <section class="section3">
+                    <section class="section3 ani">
                         <div class="inner">
                             <div class="center-box">
                                 <div class="bar"></div>
@@ -214,7 +214,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="apply-section">
+                    <section class="apply-section ani">
                         <div class="inner">
                             <div class="left-box">
                                 <h2>
@@ -249,15 +249,14 @@
                                             <div class="label">사무소 <span>*</span></div>
                                             <div class="iptBox">
                                                 <select name="" class="ipt">
-                                                    <!--아래 값은 예시입니다. -->
                                                     <option value="">-</option>
-                                                    <option value="">서초 주사무소</option>
-                                                    <option value="">수원 분사무소</option>
-                                                    <option value="">목동 분사무소</option>
-                                                    <option value="">부산 분사무소</option>
-                                                    <option value="">여주 분사무소</option>
-                                                    <option value="">천안 분사무소</option>
-                                                    <option value="">청주 분사무소</option>
+                                                    <option value="">서초</option>
+                                                    <option value="">목동</option>
+                                                    <option value="">수원</option>
+                                                    <option value="">여주</option>
+                                                    <option value="">천안</option>
+                                                    <option value="">청주</option>
+                                                    <option value="">부산</option>
                                                 </select>
                                             </div>
                                         </li>
@@ -265,16 +264,16 @@
                                             <div class="label">사건분야 <span>*</span></div>
                                             <div class="iptBox">
                                                 <select name="" class="ipt">
-                                                    <!--아래 값은 예시입니다. -->
                                                     <option value="">-</option>
-                                                    <option value="">형사</option>
-                                                    <option value="">부동산</option>
-                                                    <option value="">이혼  · 상속</option>
-                                                    <option value="">손해배상  · 대여금</option>
-                                                    <option value="">재개발 · 재건축  </option>
-                                                    <option value="">회생 · 파산</option>
-                                                    <option value="">조세 · 행정</option>
-                                                    <option value="">가상자산</option>
+                                                    <option value="형사">형사</option>
+                                                    <option value="부동산">부동산</option>
+                                                    <option value="이혼  · 상속">이혼  · 상속</option>
+                                                    <option value="손해배상  · 대여금">손해배상  · 대여금</option>
+                                                    <option value="재개발 · 재건축">재개발 · 재건축</option>
+                                                    <option value="회생 · 파산">회생 · 파산</option>
+                                                    <option value="조세 · 행정">조세 · 행정</option>
+                                                    <option value="가상자산">가상자산</option>
+                                                    <option value="자문">자문</option>
                                                 </select>
                                             </div>
                                         </li>
