--- a/sub3_1_detail.html
+++ b/sub3_1_detail.html
@@ -183,7 +183,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="apply-section">
+                    <section class="apply-section ani">
                         <div class="inner">
                             <div class="left-box">
                                 <h2>
@@ -218,15 +218,14 @@
                                             <div class="label">사무소 <span>*</span></div>
                                             <div class="iptBox">
                                                 <select name="" class="ipt">
-                                                    <!--아래 값은 예시입니다. -->
-                                                    <option value="">-</option>
-                                                    <option value="">서초 주사무소</option>
-                                                    <option value="">수원 분사무소</option>
-                                                    <option value="">목동 분사무소</option>
-                                                    <option value="">부산 분사무소</option>
-                                                    <option value="">여주 분사무소</option>
-                                                    <option value="">천안 분사무소</option>
-                                                    <option value="">청주 분사무소</option>
+                                                <option value="">-</option>
+                                                    <option value="">서초</option>
+                                                    <option value="">목동</option>
+                                                    <option value="">수원</option>
+                                                    <option value="">여주</option>
+                                                    <option value="">천안</option>
+                                                    <option value="">청주</option>
+                                                    <option value="">부산</option>
                                                 </select>
                                             </div>
                                         </li>
