--- a/sub3_1.html
+++ b/sub3_1.html
@@ -102,7 +102,7 @@
                                 <a href="./sub3_1.html" class="tag-btn active">전체</a>
                                 <a href="./sub3_1.html" class="tag-btn">도시정비사업 </a>
                                 <a href="./sub3_1.html" class="tag-btn">부동산</a>
-                                <a href="./sub3_16.html" class="tag-btn">민사</a>
+                                <a href="./sub3_1.html" class="tag-btn">민사</a>
                                 <a href="./sub3_1.html" class="tag-btn">가사</a>
                                 <a href="./sub3_1.html" class="tag-btn">자문</a>
                                 <a href="./sub3_1.html" class="tag-btn">조세 · 행정</a>
@@ -412,7 +412,7 @@
 
                         </div>
                     </section>
-                    <section class="apply-section">
+                    <section class="apply-section ani">
                         <div class="inner">
                             <div class="left-box">
                                 <h2>
@@ -447,15 +447,14 @@
                                             <div class="label">사무소 <span>*</span></div>
                                             <div class="iptBox">
                                                 <select name="" class="ipt">
-                                                    <!--아래 값은 예시입니다. -->
-                                                    <option value="">-</option>
-                                                    <option value="">서초 주사무소</option>
-                                                    <option value="">수원 분사무소</option>
-                                                    <option value="">목동 분사무소</option>
-                                                    <option value="">부산 분사무소</option>
-                                                    <option value="">여주 분사무소</option>
-                                                    <option value="">천안 분사무소</option>
-                                                    <option value="">청주 분사무소</option>
+                                                <option value="">-</option>
+                                                    <option value="">서초</option>
+                                                    <option value="">목동</option>
+                                                    <option value="">수원</option>
+                                                    <option value="">여주</option>
+                                                    <option value="">천안</option>
+                                                    <option value="">청주</option>
+                                                    <option value="">부산</option>
                                                 </select>
                                             </div>
                                         </li>
