--- a/sub3_3.html
+++ b/sub3_3.html
@@ -79,12 +79,12 @@
             <article id="smooth-content">
                 
 
-                <main class="sub sub1_3 sub1">
+                <main class="sub sub3_1 sub3_2 sub3">
                     <section class="sub-banner-section">
                         <div class="inner">
                             <div class="sec_top"></div>
                             <div class="bar"></div>
-                            <h1>오시는길</h1>
+                            <h1>소식</h1>
                             <div class="en">LAWFIRM <span class="gold">GOODPLAN</span></div>
                         </div>
                     </section>
@@ -92,69 +92,219 @@
                         <div class="inner">
                             <div class="sub-title-div">
                                 <div class="bar"></div>
-                                <h2>오시는 길</h2>
+                                <h2>
+                                   <b class="gold">굿플랜 소식</b>
+                                </h2>
                             </div>
                             <div class="sub-content-div">
-                                전국 7개 사무소를 운영하며, 의뢰인의 접근성을 최우선으로 생각합니다.<br/>
-                                각 지역별 전담 변호사가 배치되어 보다 신속하고 안정적인 법률 서비스를 제공합니다.
+                                굿플랜은 멈추지 않고 움직입니다.
                             </div>
-                            
-
-
 
                             <div class="success-tag-list">
-                                <a href="./sub1_3.html" class="tag-btn ">서초</a>
-                                <a href="./sub1_4.html" class="tag-btn">목동 </a>
-                                <a href="./sub1_5.html" class="tag-btn ">수원</a>
-                                <a href="./sub1_6.html" class="tag-btn">여주</a>
-                                <a href="./sub1_7.html" class="tag-btn active">천안</a>
-                                <a href="./sub1_8.html" class="tag-btn">청주</a>
-                                <a href="./sub1_9.html" class="tag-btn">부산</a>
+                                <a href="./sub3_2.html" class="tag-btn">전체</a>
+                                <a href="./sub3_2.html" class="tag-btn">언론보도 </a>
+                                <a href="./sub3_2.html" class="tag-btn active">소식</a>
+                            </div>
+
+                            <div class="search-div">
+                                <div class="search-box">
+                                    <input type="text" class="ipt" placeholder="검색어를 입력해주세요"/>
+                                    <button type="submit" class="search-btn"><img src="./img/sub/sub3_1/search-icon.png" alt="돋보기" class="icon"/></button>
+                                </div>
                             </div>
 
 
-                            <ul class="tab-content-list">
-                                <li class="active">
-                                    <div class="item">
-                                        <div class="map-div">
-                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3195.422853163388!2d127.15140227599403!3d36.784410772251675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ad71ff9968bf7%3A0x3ad322233cdbaceb!2z7Lap7LKt64Ko64-EIOyynOyViOyLnCDrj5nrgqjqtawg7LKt7IiYMTTroZwgNjg!5e0!3m2!1sko!2skr!4v1769500329794!5m2!1sko!2skr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <label class="all-chk-div">
+                                <input type="checkbox"/>
+                                <span>전체선택</span>
+                            </label>
+
+                            <div class="menuBox">
+                                <ul class="menuList">
+                                    <li>
+                                        <a href="#" class="item"><img src="./img/boardImg/settings.png" alt="관리자"/> <p class="txt">관리자</p></a>
+                                    </li>
+                                    <li>
+                                        <a href="./write.html" class="item"><img src="./img/boardImg/write.png" alt="글쓰기"/> <p class="txt">글쓰기</p></a>
+                                    </li>
+                                    <li>
+                                        <button type="button" class="item"><img src="./img/boardImg/threedot.png" alt="편집"/> <p class="txt">편집</p></button>
+                                        <ul class="subMenu">
+                                            <li><button type="button" class="item">선택삭제</button></li>
+                                            <li><a href="#" class="item2">선택복사</a></li>
+                                            <li><a href="#" class="item2">선택이동</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <ul class="img-list">
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="./view.html">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
                                         </div>
-                                        <div class="content-div">
-                                            <div class="map-title">천안사무소</div>
-                                            <div class="address">
-                                                충청남도 천안시 동남구 청수14로 68 7층 703, 704호<br/>
-                                                (대전지방검찰청 천안지청 맞은 편 건물)
-                                            </div>
-                                            <div class="info-wrap">
-                                                <div class="title">연락처</div>
-                                                <div class="info-div">
-                                                    <div class="list bold">
-                                                        <div class="label">전화번호</div>
-                                                        <div class="content"><a href="tel:1551-6494">1551-6494</a></div>
-                                                    </div>
-                                                    <div class="list">
-                                                        <div class="label">팩스번호</div>
-                                                        <div class="content">041-555-6490</div>
-                                                    </div>
-                                                    <div class="list">
-                                                        <div class="label">이메일</div>
-                                                        <div class="content"><span class="underline">ask@goodplan.kr</span></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="parking-wrap">
-                                                <div class="title">주차안내</div>
-                                                <div class="content">
-                                                    건물 내 지하주차장 이용
-                                                </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li>
+                                    <input type="checkbox" />
+                                    <a href="#">
+                                        <div class="item">
+                                            <div class="img-div" style="background-image: url('./img/sub/sub3_2/example.jpg');"></div>
+                                            <div class="content-div">
+                                                <div class="category">언론보도</div>
+                                                <div class="title">[언론보도] 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요? 강제추행 검찰송치 되었다면 어떻게 대응을 해야 할까요?</div>
+                                                <div class="date">2025.12.15 </div>
+                                            </div>
+                                        </div>
+                                    </a>
                                 </li>
                             </ul>
+
+                            <div class="paging_box no-result"><span class="gold">'검색내용'</span>에 대한 검색결과가 없습니다.</div>
+
+
+                            <div class="paging_box">페이징위치입니다</div>
+
+
                         </div>
                     </section>
-
                     <section class="apply-section ani">
                         <div class="inner">
                             <div class="left-box">
@@ -249,7 +399,6 @@
                             </div>
                         </div>
                     </section>
-
                 </main>
 
                 <!-- 푸터 시작 { -->
