애니메이션 효과

--- a/sub4_1.html
+++ b/sub4_1.html
@@ -84,7 +84,7 @@
                         <div class="inner">
                             <div class="sec_top"></div>
                             <div class="bar"></div>
-                            <h1>전문칼럼</h1>
+                            <h1>상담신청</h1>
                             <div class="en">LAWFIRM <span class="gold">GOODPLAN</span></div>
                         </div>
                     </section>
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="step-section">
+                    <section class="step-section ani">
                         <div class="inner">
                             <h3>상담은 이렇게 진행됩니다.</h3>
                             <div class="sub-content-div">
@@ -233,7 +233,7 @@
                             </ul>
                         </div>
                     </section>
-                    <section class="section1">
+                    <section class="section1 ani">
                         <div class="inner">
                             <div class="sub-title-div">
                                 <div class="bar"></div>
