--- a/sub4_1.html
+++ b/sub4_1.html
@@ -248,13 +248,13 @@
 
 
                             <div class="success-tag-list">
-                                <a href="./sub1_3.html" class="tag-btn active">서초</a>
-                                <a href="./sub1_4.html" class="tag-btn">목동 </a>
-                                <a href="./sub1_5.html" class="tag-btn">수원</a>
-                                <a href="./sub1_6.html" class="tag-btn">여주</a>
-                                <a href="./sub1_7.html" class="tag-btn">천안</a>
-                                <a href="./sub1_8.html" class="tag-btn">청주</a>
-                                <a href="./sub1_9.html" class="tag-btn">부산</a>
+                                <button type="button" class="tag-btn active">서초</button>
+                                <button type="button" class="tag-btn">목동 </button>
+                                <button type="button" class="tag-btn">수원</button>
+                                <button type="button" class="tag-btn">여주</button>
+                                <button type="button" class="tag-btn">천안</button>
+                                <button type="button" class="tag-btn">청주</button>
+                                <button type="button" class="tag-btn">부산</button>
                             </div>
 
 
